--- a/templates/index.html
+++ b/templates/index.html
@@ -37,7 +37,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Sentiment Analysis</h1>
+        <h1>Sentiment Analysis of Social Media Data</h1>
         <form action="/" method="post">
             <input type="text" name="tweet_content" placeholder="Enter tweet text...">
             <br>
